<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_first_name"
                android:inputType="textPersonName"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_item_padding">

            <EditText
                android:id="@+id/register_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_last_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:nextFocusDown="@+id/edit_company_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_item_padding">

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_item_padding">

            <EditText
                android:id="@+id/register_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_company_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_item_padding">

            <EditText
                android:id="@+id/register_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_role"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/InputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_item_padding"
            android:text="@string/prompt_attendee_type" />

        <RadioGroup
            android:id="@+id/radio_attendeeType_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_attendee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/attendee" />

            <RadioButton
                android:id="@+id/radio_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student" />

            <RadioButton
                android:id="@+id/radio_volunteer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volunteer" />
        </RadioGroup>

        <Button
            android:id="@+id/register_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:elevation="@dimen/button_elevation"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/action_register"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:targetApi="lollipop" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>