<resources>
    <string name="app_name">Conference</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_register">Verify Your Details</string>
    <string name="calendar_not_found">No compatible calendar application found.</string>
    <string name="permissions_snackbar">Run Time Permissions are not granted</string>
    <string name="permissions_dialog_title">Permissions Required</string>
    <string name="permissions_dialog_message">This application requires permissions in order to work correctly. Do you want to grant them now?</string>

    <!-- Strings related to registering the user -->
    <string name="prompt_email">Email</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_company_name">Company Name (optional)</string>
    <string name="prompt_role">Role (optional)</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">Please enter valid E-mail Address</string>
    <string name="success">Success</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="progressdialog_message">Please wait...</string>
    <string name="ask_for_registration">Do you wish to register?</string>
    <string name="registration_successfull">Successfully Registered</string>
    <string name="registration_unsuccessful">Registration Unsuccessful. Please try again!</string>
    <string name="net_unavailable">Network not available</string>
    <string name="turn_on">Turn on WiFi or Mobile Data in Settings</string>
    <string name="close_app">Close application</string>
    <string name="sign_in_cancelled">Sign In Cancelled</string>
    <string name="unknown_error">Unknown Error Occurred</string>

    <!-- Strings for accessibility -->
    <!-- Content Description Strings -->
    <string name="anita_borg">Anita Borg Institute</string>
    <string name="ghc">Grace Hopper Celebration for Women in Computing</string>

    <!-- Strings for FB Sign In -->
    <string name="facebook_app_id">141216909758045</string>
    <string name="fb_login_protocol_scheme">fb141216909758045</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="empty_recyclerview_text">No Sessions!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_event_detail">Event Details</string>
    <string name="event_title">Quiet: How to Harness the Strengths of Introverts to Transform How We Work, Lead And Innovate</string>
    <string name="location">George R Brown General Assembly</string>
    <string name="time">October 19, 2016, 14:00 - 15:15</string>
    <string name="audience">Beginner/Intermediate</string>
    <string name="description">Description</string>
    <string name="description_text">In an enlightening, relatable and practical talk, Marc Benioff shows us that introverts think and work in ways that are crucial to the survival of today’s organizations. Drawing on her original research and the latest in neuroscience and psychology, Marc will radically change your view of the best way to develop leaders, manage teams, make smart hires and stimulate innovation.</string>
    <string name="speakers">Speakers</string>
    <string name="speaker_name">Marc Benioff</string>
    <string name="speaker_position">Chairman and CEO, Salesforce</string>
    <string name="share">Share</string>
    <string name="connected_accounts">Connected Accounts</string>

    <!-- Strings related to fragment titles -->
    <string name="schedule_title">Schedule</string>
    <string name="profile_title">My Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="myschedule_title">My Schedule</string>

    <!-- Strings related to widgets like button, toasts, snackbar -->
    <string name="google_button">Connect with Google</string>
    <string name="facebook_button">Connect with Facebook</string>
    <string name="connected">Connected</string>
    <string name="dialog_title">Disconnect Account</string>
    <string name="dialog_message">Are you sure you want to disconnect this account?</string>
    <string name="save">Save Changes</string>
    <string name="save_toast">Changes Saved Successfully</string>
    <string name="edit_avatar">Edit Avatar</string>
    <string name="delete_avatar">Delete Avatar</string>
    <string name="select_avatar">Select your avatar</string>
    <string name="open_settings">Open Settings</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="add_to_bookmarks">Add to Bookmarks</string>
    <string name="remove_from_bookmarks">Remove from Bookmarks</string>

    <!-- Strings related to saving image in gallery -->
    <string name="image_title">Conference</string>
    <string name="image_description">Profile Picture</string>

    <!--Strings related to speakers -->
    <string name="speaker_download_failed">Unable to fetch Speaker. Please try again!</string>
    <string name="speaker_introduction_section_heading">Introduction</string>

    <!-- Strings related to navigation drawer -->
    <string name="nav_title">Android Studio</string>
    <string name="email">android.studio@android.com</string>
    <string name="item_import">Import</string>
    <string name="item_gallery">Gallery</string>
    <string name="item_slideshow">Slideshow</string>
    <string name="item_tools">Tools</string>
    <string name="item_communicate">Communicate</string>
    <string name="item_share">Share</string>
    <string name="item_send">Send</string>

    <!--Strings related to intents -->
    <string name="edit_profile" translatable="false">edit_profile</string>
    <string name="registration" translatable="false">form_data</string>
    <string name="speaker_data" translatable="false">speaker_data</string>
    <string name="session_id" translatable="false">session_id</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pre_registration">PreRegistration</string>
    <string name="title_activity_speaker_details">SpeakerDetails</string>
    <string name="title_map_fragment">Maps</string>

    <!--Strings related to auth-->
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
</resources>
