<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/item_schedule" />
        <item
            android:id="@+id/nav_myschedule"
            android:icon="@drawable/ic_event_available_black_24dp"
            android:title="@string/item_my_schedule" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/item_map" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/item_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/item_about" />
    </group>

</menu>
