<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/nav_avatar_view"
        android:layout_width="@dimen/nav_drawer_avatar_size"
        android:layout_height="@dimen/nav_drawer_avatar_size"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/male_icon_9_glasses"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/nav_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/nav_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
